--- a/templates/footer/politicadeprivacidad.html
+++ b/templates/footer/politicadeprivacidad.html
@@ -257,7 +257,7 @@ Attention: Consumer Affairs<br>
 3000 University Center Drive<br>
 Tampa, Florida 33612-6408</address>
 
-  <p><a href="/waomovies/inicio/">http://www.waomovies.com</a></p>
+  <p><a href="/inicio/">http://www.waomovies.com</a></p>
 
 
 <p>Esta política de privacidad fue revisada el 7 de julio de 2018.</p>
