--- a/templates/sobre/index.html
+++ b/templates/sobre/index.html
@@ -93,15 +93,15 @@
 			    <div class="container">
 			    	<div class="row align-items-center justify-content-between d-flex">
 				      <div id="logo">
-				        <a href="/waomovies/inicio/"><img  height="40" src="{% static '' %}imgs/logo.png" alt="" title="" /></a>
+				        <a href="/inicio/"><img  height="40" src="{% static '' %}imgs/logo.png" alt="" title="" /></a>
 				      </div>
 				      <nav id="nav-menu-container">
 				        <ul class="nav-menu">
-				          <li class="menu-active"><a href="/waomovies/inicio/">Inicio</a></li>
+				          <li class="menu-active"><a href="/inicio/">Inicio</a></li>
 				          <li><a href="#offer">Servicios</a></li>
 				          <li><a href="#about">Consejos</a></li>
 				          <li><a href="#price">Contactanos</a></li>
- 				          <!--li><a href="/waomovies/blog/">Blog</a></li-->
+ 				          <!--li><a href="/blog/">Blog</a></li-->
 
 				          <!--li><a href="#project">Project</a></li>
 
@@ -331,7 +331,7 @@
 							<div class="title text-center">
 								<h1 class="mb-10 text-white">¡Me convenciste!</h1>
 								<p class="text-white">¿Ahora qué?, Registrate.</p>
-								<a class="primary-btn" href="/waomovies/register/">Regístrarme</a>
+								<a class="primary-btn" href="/register/">Regístrarme</a>
 							</div>
 						</div>
 					</div>	
@@ -624,7 +624,7 @@
       <div class="flex-child-ft item2">
         <h4>Ayuda</h4>
         <ul>
-          <li><a href="/waomovies/sobre/">Sobre</a></li> 
+          <li><a href="/sobre/">Sobre</a></li> 
           <li><a href="#">Contactanos</a></li>
           <!--li><a href="#">Centro de ayuda</a></li-->
         </ul>
@@ -632,8 +632,8 @@
       <div class="flex-child-ft item3">
         <h4>Legal</h4>
         <ul>
-          <li><a href="/waomovies/terminosycondiciones/">Terminos de uso</a></li> 
-          <li><a href="/waomovies/politicadeprivacidad/">Políticas de privacidad</a></li>  
+          <li><a href="/terminosycondiciones/">Terminos de uso</a></li> 
+          <li><a href="/politicadeprivacidad/">Políticas de privacidad</a></li>  
           <li><a data-toggle="modal" data-target="#exampleModalLong" style="cursor: pointer;">Derechos de autor</a></li>
           <!-- Button trigger modal -->
 
