--- a/templates/login.html
+++ b/templates/login.html
@@ -296,7 +296,7 @@ img.emoji {
 					<div class="sh-column-wrapper">
 		
 <div id="text-block-98b838cb14828f1bb30771b38ffc6b10" class="sh-text-block">
-	<p style="text-align: center;"><span style="color: #ffffff;"><img style="border-radius: 36px; width: 150px; height: 150px;" src="{{ user.profile.perfil_img.url }}"></span></p></div>
+	<p style="text-align: center;"><span style="color: #ffffff;"><img style="border-radius: 50%; width: 150px; height: 150px;" src="{{ user.profile.perfil_img.url }}"></span></p></div>
 <div class="sh-heading" id="heading-867d718c1e538b5f2995dad162328747">
 	<h1 class="sh-heading-content size-default text-center">
 			</h1>
