--- a/templates/base.html
+++ b/templates/base.html
@@ -927,7 +927,7 @@ var resultac = document.getElementById('result').style.display= "none";
             </div>
             </div>
             </div>
-            <a href="/inicio/"><img style="margin-left: 15px;" class="logoz logo" src="{% static 'img/waologo.png' %}" alt="" width="180" height="90"></a>
+            <a href="/inicio/"><img id="logoz" style="margin-left: 15px;" class="logoz logo" src="{% static 'img/waologo.png' %}" alt="" ></a>
 
             <a href="/inicio/"><img style="width: auto;" class="logo logito" src="{% static 'img/wamovieslogo.png' %}" alt="" ></a>
              
