setting up amazon cloundfront

--- a/templates/generoview.html
+++ b/templates/generoview.html
@@ -392,7 +392,7 @@
 					
 				</div>
 				<div class="flex-wrap-movielist mv-grid-fw">
-					{% for o in genero %}
+					{% for o in peliculas %}
 						<div class="movie-item-style-2 movie-item-style-1">
 							<img src="{{ o.Cover.url }}" alt="">
 							{% include 'ajax.html' %}
