--- a/templates/moviesingle.html
+++ b/templates/moviesingle.html
@@ -1278,7 +1278,7 @@ $(this).remove();
                 <div class="mt-3">
                  <div  class="md-form form-lg">
     
-                <form  class="my-ajax-form" method='POST'data-url="/cambiar_votaciono/{{i.id}}/as/" >{% csrf_token %}
+                <form  class="my-ajax-form" method='POST' data-url="/cambiar_votaciono/{{i.id}}/asm/" >{% csrf_token %}
                    
       <button onclick="votar(this)" style="background:none; border: none; cursor: pointer;" type="submit"><i style="font-size: 18px;" class="fa fa-refresh point"></i></button>
       </form>
@@ -1294,7 +1294,28 @@ $(this).remove();
 
        {% else %}
        
+    <!-- Collapsible element -->
+                                                <div style=" margin-left:-50px;  width: 195px; height: 60px;"  class="collapse container" id="collapseExampl">
+                                                    <div class="mt-3">
+                                                        <div class="md-form form-lg">
     
+                                                <form  class="my-ajax-form" method='POST'data-url="/votaciono/{{peliculaa.id}}/as/" >{% csrf_token %}
+                                                 <ul class="rate-area">
+                                              <input  type="radio" id="5-star" name="votacion" value="5" /><label   style="font-size: 180%;"  for="5-star" title="Amazing">5 stars</label>
+                                              <input type="radio" id="4-star" name="votacion" value="4" /><label   style="font-size: 180%;" for="4-star" title="Good">4 stars</label>
+                                              <input type="radio" id="3-star" name="votacion" value="3" /><label  style="font-size: 180%;"  for="3-star" title="Average">3 stars</label>
+                                              <input type="radio" id="2-star" name="votacion" value="2" /><label   style="font-size: 180%;" for="2-star" title="Not Good">2 stars</label>
+                                              <input type="radio" id="1-star" name="votacion" value="1" /><label   style="font-size: 180%;" for="1-star" title="Bad">1 star</label>
+                                              <input type="number" value="{{peliculaa.id}}" name="pelicula">
+
+                                          </ul>
+                  <button onclick="votar(this)" style="background:none; border: none; cursor: pointer;" type="submit"><i style="font-size: 14px;" class="fa fa-send point"></i></button>
+                  </form>
+                                            </div>
+                                                                                                    
+                                                    </div>
+                                                </div>
+                                                <!-- / Collapsible element -->
        {% endif %}
       </div>
 
@@ -1305,7 +1326,7 @@ $(this).remove();
                 <div class="mt-3">
                  <div class="md-form form-lg">
     
-               <small><img src="http://127.0.0.1:8000/static/img/star/{{promedio}}.png" style="width: 140px; height: 30px;" title="Inicia Sesión para poder votar"></small>
+               <small><img src="https://d3mp3oxoqwxddf.cloudfront.net/static/img/star/{{promedio}}.png" style="width: 140px; height: 30px;" title="Inicia Sesión para poder votar"></small>
            </div>
                                
                 </div>
@@ -1377,7 +1398,9 @@ $(this).remove();
                      <p class="tags">
                       
 
-                      <span class="time"><a href="#">{{ peliculaa.tag_principal }}, {{ peliculaa.tema }}, {{ peliculaa.tag1 }}, {{ peliculaa.tag2 }}, {{ peliculaa.tag3 }}</a></span>
+                      <span class="time">
+                        <a href="/search/search-{{ peliculaa.tag_principal }}/" style="background-color: #2874A6; color: white; padding-right:6px; padding-left: 5px;">{{ peliculaa.tag_principal }}</a>, 
+                        <a href="/search/search-{{ peliculaa.tema }}/" style="background-color: #2874A6; color: white; padding-right:6px; padding-left: 5px;">{{ peliculaa.tema }}</a>, <a href="/search/search-{{ peliculaa.tag1 }}/" style="background-color: #2874A6; color: white; padding-right:6px; padding-left: 5px;">{{ peliculaa.tag1 }}</a>, <a href="/search/search-{{ peliculaa.tag2 }}/" style="background-color: #2874A6; color: white; padding-right:6px; padding-left: 5px;">{{ peliculaa.tag2 }}</a>, <a href="/search/search-{{ peliculaa.tag3 }}/" style="background-color: #2874A6; color: white; padding-right:6px; padding-left: 5px;">{{ peliculaa.tag3 }}</a></span>
              
                      </p>
                     </div>
@@ -1552,7 +1575,7 @@ $(this).remove();
             <p class="time">
               {% for aa in votacion3 %}
 {% if i.user_id == aa.user_id %}
-             <img src="http://127.0.0.1:8000/static/img/star/{{aa}}.png" style="top: -24px; position: relative; width: 82px; height: 16px;"> 
+             <img src="https://d3mp3oxoqwxddf.cloudfront.net/static/img/star/{{aa}}.png" style="top: -24px; position: relative; width: 82px; height: 16px;"> 
               {% else %}
               {% endif %}
               {% endfor %}
