--- a/templates/base.html
+++ b/templates/base.html
@@ -203,7 +203,6 @@ var resultac = document.getElementById('result').style.display= "none";
 {% if request.user.is_authenticated %}
 <div class="has-submenu">
 <a class="menu-item show-submenu" href="#">
-<i class="fa fa-cog bg-orange-dark"></i>
 <em>Perfil</em>
 </a>
 <div class="submenu">
@@ -312,7 +311,7 @@ var resultac = document.getElementById('result').style.display= "none";
    <!--h1>Notifier</h1>
     <p>Notifications</p>
     <ul id="notifylist"></ul-->
-    <script>
+    <!--script>
       var loc = window.location
 var wsStart = 'ws://'
 if (loc.protocol == 'https:'){
@@ -334,7 +333,7 @@ if (loc.protocol == 'https:'){
       })
       document.ws = webSocketBridge; /* for debugging */
     })
-    </script>
+    </script-->
 
 
   
