--- a/templates/base.html
+++ b/templates/base.html
@@ -67,6 +67,20 @@
     overflow-y: scroll;
     max-height: 350px;
   }
+  @media (max-width: 767px) {
+    #searchshow {
+      display: none;
+    }
+    #coño {
+      display:none;
+    }
+  }
+
+  @media (min-width: 767px) {
+    #page-transitions {
+      display:none;
+    }
+  }
 </style>
   <div id="page-transitions">
 
